# Dining-philosophers

./: .gitignore  CMakeLists.txt  compile.sh  dinning_phi
include/: FIFO.h  FIFO_lib.h  dinning.h  libs.h  table.h
src/: FIFO.c  dinning_FIFO.c  dinning_locks.c  main.c
